--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Backend Integration Test</title>
-    </head>
-    <body>
-        Backend build integration test
-    </body>
+  <head>
+    <title>Backend Integration Test</title>
+  </head>
+  <body>
+    <h1>Backend builds</h1>
+    <p>Hello world</p>
+  </body>
 </html>
