--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Backend builds</h1>
-    <p>Hello world and kaushik</p>
+    <p>Today is Oct 4, 2022. This is the second build</p>
   </body>
 </html>
